tests/ui/type-alias-impl-trait/type-alias-impl-trait-const.stderr
error: only functions and methods can define opaque types
  --> $DIR/type-alias-impl-trait-const.rs:9:1
   |
LL | #[define_opaque(Foo)]
   | ^^^^^^^^^^^^^^^^^^^^^

error: only functions and methods can define opaque types
  --> $DIR/type-alias-impl-trait-const.rs:14:1
   |
LL | #[define_opaque(Foo)]
   | ^^^^^^^^^^^^^^^^^^^^^

error: unconstrained opaque type
  --> $DIR/type-alias-impl-trait-const.rs:6:16
   |
LL | pub type Foo = impl Debug;
   |                ^^^^^^^^^^
   |
   = note: `Foo` must be used in combination with a concrete type within the same crate

error[E0308]: mismatched types
  --> $DIR/type-alias-impl-trait-const.rs:11:19
   |
LL | pub type Foo = impl Debug;
   |                ---------- the expected opaque type
...
LL | const _FOO: Foo = 5;
   |                   ^ expected opaque type, found integer
   |
   = note: expected opaque type `Foo`
                     found type `{integer}`
note: this item must have a `#[define_opaque(Foo)]` attribute to be able to define hidden types
  --> $DIR/type-alias-impl-trait-const.rs:11:7
   |
LL | const _FOO: Foo = 5;
   |       ^^^^

error[E0308]: mismatched types
  --> $DIR/type-alias-impl-trait-const.rs:16:20
   |
LL | pub type Foo = impl Debug;
   |                ---------- the expected opaque type
...
LL | static _BAR: Foo = 22_u32;
   |                    ^^^^^^ expected opaque type, found `u32`
   |
   = note: expected opaque type `Foo`
                     found type `u32`
note: this item must have a `#[define_opaque(Foo)]` attribute to be able to define hidden types
  --> $DIR/type-alias-impl-trait-const.rs:16:8
   |
LL | static _BAR: Foo = 22_u32;
   |        ^^^^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0308`.
